# overmind-local

./: README.md  pyproject.toml
overmind_local/: __init__.py  auto_instrument.py  autoloop.py  cli.py  copilot.py  gepa.py  optimize.py  storage.py  tracing.py
overmind_local.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
