[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "overmind-local"
version = "0.1.0"
description = "Self-hosted LLM agent observability and optimization — no cloud, no API key"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "litellm>=1.40",
]

[project.optional-dependencies]
openai     = ["openai>=1.0"]
anthropic  = ["anthropic>=0.20"]
all        = ["openai>=1.0", "anthropic>=0.20"]

[project.scripts]
overmind-local = "overmind_local.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["overmind_local*"]
